fix star gap

--- a/frontend/streamconnect/src/pages/movie/MovieRecommendations.css
+++ b/frontend/streamconnect/src/pages/movie/MovieRecommendations.css
@@ -75,7 +75,7 @@
 .stars-container {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 0px;
   flex-wrap: wrap;
   justify-content: center;
 }
